[gd_scene load_steps=12 format=3 uid="uid://dem4i7chg25lj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_rx4g5"]
[ext_resource type="PackedScene" uid="uid://bpe4mflxblvk7" path="res://scenes/player.tscn" id="1_vqgxf"]
[ext_resource type="PackedScene" uid="uid://cod88aruevx4a" path="res://scenes/mob.tscn" id="2_nbfcn"]
[ext_resource type="FontFile" uid="uid://db12j8qom8kp8" path="res://fonts/Montserrat-Medium.ttf" id="4_671nd"]
[ext_resource type="Script" path="res://scripts/score-label.gd" id="5_554ck"]

[sub_resource type="BoxShape3D" id="BoxShape3D_521hp"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_antas"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1tols"]
albedo_color = Color(0.968627, 0.545098, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_civtq"]
material = SubResource("StandardMaterial3D_1tols")

[sub_resource type="Curve3D" id="Curve3D_ocekw"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.2869, 0, -14.4528, 0, 0, 0, 0, 0, 0, 13.1429, 0, -14.494, 0, 0, 0, 0, 0, 0, 13.1429, 0, 14.8589, 0, 0, 0, 0, 0, 0, -13.2869, 0, 14.8589, 0, 0, 0, 0, 0, 0, -13.2869, 0, -14.4528),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_gs57i"]
default_font = ExtResource("4_671nd")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_rx4g5")
mob_scene = ExtResource("2_nbfcn")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_521hp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_antas")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 20, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_vqgxf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2716, 0, -14.4846)

[node name="MeshInstance1" type="MeshInstance3D" parent="Cylinders"]
mesh = SubResource("CylinderMesh_civtq")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29.3165)
mesh = SubResource("CylinderMesh_civtq")
skeleton = NodePath("")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.4043, 0, 0)
mesh = SubResource("CylinderMesh_civtq")
skeleton = NodePath("")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.4043, 0, 29.3165)
mesh = SubResource("CylinderMesh_civtq")
skeleton = NodePath("")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_ocekw")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00155862, 0, -0.999999, 0, 1, 0, 0.999999, 0, 0.00155862, -13.2869, 0, -14.4528)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_gs57i")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 320.0
offset_top = 24.0
offset_right = 381.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_554ck")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -14.0
offset_right = 113.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press (Enter) to retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
